# coyete

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  main
backend/: Cargo.toml
backend/conf/: default.toml
backend/conf/log/: log_test.toml
backend/data/: Cargo.toml
backend/data/migrations/.users_temp/: up.sql
backend/data/migrations/2017-09-30-054013_users/: down.sql  up.sql
backend/data/src/: lib.rs  schema.rs
backend/data/src/certification/: mod.rs  temp_mod.rs
backend/data/src/persistance/: mod.rs
backend/data/src/users/: mod.rs
backend/src/: crypto.rs  lib.rs  logger.rs  request.rs  response.rs  validator.rs
backend/src/api/: auth.rs  mod.rs
backend/src/errors/: kind.rs  mod.rs
backend/src/services/: user.rs
backend/tests/: ci_coverage.rs
conf/: default.toml  development.toml
conf/log/: log_config.toml
coyete-data/: Cargo.toml
coyete-data/migrations/2017-09-30-054013_users/: up.sql
coyete-data/models/: users.rs
coyete-data/persistance/: error.rs  mod.rs  schema.rs
coyete-data/src/: lib.rs  schema.rs
coyete-data/src/auth/: mod.rs  models.rs
coyete-data/src/persistance/: mod.rs  schema.rs
coyete-data/src/sessions/: models.rs
coyete-data/src/users/: mod.rs  models.rs  users.rs
coyete-server/: Cargo.toml
coyete-server/conf/: development.toml
coyete-server/src/: lib.rs  logger.rs  middleware.rs  settings.rs
coyete-server/src/api/: guest.rs  mod.rs  response.rs
coyete-server/src/auth/: claim.rs  mod.rs  security.rs
coyete-server/src/guards/: pg.rs
coyete-server/src/handlers/: mod.rs
coyete-server/src/models/: context.rs  mod.rs
coyete-server/src/validation/: user.rs
src/: .main.rs.swp  config.rs  errors.rs  lib.rs  logger.rs  main.rs  settings.rs
src/auth/: claim.rs  mod.rs
src/handlers/: mod.rs
src/log/: log_config.toml
src/models/: crypto.rs
src/persistance/: error.rs  mod.rs
src/validation/: user.rs
tests/: ci_coverage.rs
