[package]
authors = ["Alejandro Gaviria <mr.gaviria@gmail.com>"]
name = "coyete"
version = "0.1.0"

[dependencies]
chrono = "0.4.0"
config = "0.7.0"
jwt = "0.4.0"
log = "0.3.8"
rand = "0.3.16"
rocket = "0.3.2"
rocket_codegen = "0.3.2"
rust-argon2 = "0.3.0"
serde = "1.0.11"
serde_derive = "1.0.11"
toml = "0.4.5"

[dependencies.log4rs]
features = ["toml_format"]
optional = false
version = "0.7.0"
