[package]
authors = ["Alejandro Gaviria <mr.gaviria@gmail.com>"]
name = "coyete"
version = "0.1.0"

[dependencies]
chrono = "0.4.0"
config = "0.7.0"
harsh = "0.1.4"
lazy_static = "0.2.8"
log = "0.3.8"
postgres = "0.15.1"
r2d2 = "0.7.4"
r2d2_postgres = "0.13.0"
rand = "0.3.16"
rocket = "0.3.2"
rocket_codegen = "0.3.2"
rust-argon2 = "0.3.0"
rwt = "0.3.0"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.3"
toml = "0.4.5"
uuid = "0.5.1"
validator = "0.6.0"
validator_derive = "0.6.0"

[dependencies.diesel]
features = ["postgres", "uuid", "chrono", "serde_json"]
version = "0.16.0"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.16.0"

[dependencies.log4rs]
features = ["toml_format"]
optional = false
version = "0.7.0"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"
default-features = false
features = ["json"]
