[package]
authors = ["Alejandro Gaviria <mr.gaviria@gmail.com>"]
name = "coyete-server"
version = "0.1.0"

[[bin]]
name = "coyete-server"
path = "src/bin/main.rs"

[dependencies]
config = "0.7.0"
log = "0.3.8"
rocket = "0.3.2"
rocket_codegen = "0.3.2"
serde = "1.0.11"
serde_derive = "1.0.11"
toml = "0.4.5"

[workspace]
members = ["data"]

[dependencies.log4rs]
features = ["toml_format"]
optional = false
version = "0.7.0"
