[package]
authors = ["Alejandro Gaviria <mr.gaviria@gmail.com>"]
name = "backend"
version = "0.1.0"

[[bin]]
name = "coyete-server"
path = "src/bin/main.rs"
test = true
doc = false

[dependencies]
chrono = "0.4.0"
config = "0.7.0"
dotenv = "0.10.1"
log = "0.3.8"
rocket = "0.3.2"
rocket_codegen = "0.3.2"
serde = "1.0.11"
serde_derive = "1.0.11"
toml = "0.4.5"
coyete_data = { version = "0.1.0", path = "data/" }

[dependencies.diesel]
features = ["postgres"]
version = "0.16.0"

[dependencies.diesel_codegen]
default-features = false
features = ["dotenv", "postgres"]
version = "0.16.0"

[dependencies.log4rs]
features = ["toml_format"]
optional = false
version = "0.7.0"

[workspace]
members = ["data"]
