[package]
authors = ["Alejandro Gaviria <mr.gaviria@gmail.com>"]
name = "coyete-data"
repository = "https://github.com/agaviria/coyete"
version = "0.1.0"

[dependencies]
chrono = "0.4.0"
r2d2 = "0.7.4"
r2d2-diesel = "0.16.0"
rocket = "0.3.2"
rocket_codegen = "0.3.2"
uuid = "0.5.1"

[dependencies.diesel]
features = ["postgres", "uuid", "chrono"]
version = "0.16.0"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.16.0"

[lib]
crate-type = ["lib"]
name = "coyete_data"
path = "src/lib.rs"
