[package]
authors = ["Alejandro Gaviria <mr.gaviria@gmail.com>"]
name = "coyete-server"
version = "0.1.0"

[[bin]]
name = "coyete-server"
path = "src/bin/main.rs"

[dependencies]
chrono = "0.4.0"
config = "0.7.0"
dotenv = "0.10.1"
harsh = "0.1.4"
lazy_static = "0.2.8"
log = "0.3.8"
postgres = "0.15.1"
r2d2 = "0.7.4"
r2d2_postgres = "0.13.0"
rand = "0.3.16"
rocket = "0.3.2"
rocket_codegen = "0.3.2"
rust-argon2 = "0.3.0"
rwt = "0.3.0"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.3"
toml = "0.4.5"
validator = "0.6.0"
validator_derive = "0.6.0"

[dependencies.coyete-data]
path = "../coyete-data/"

[dependencies.diesel]
features = ["postgres", "chrono", "serde_json"]
version = "0.16.0"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.16.0"

[dependencies.log4rs]
features = ["toml_format"]
optional = false
version = "0.7.0"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
git = "https://github.com/SergioBenitez/Rocket.git"
